# ai-smart-contract-analysis

./: .gitignore  README.md  delegatecall_detection.py  file_loader.py  integer_overflow_underflow.py  json_saver.py  main.py  pyproject.toml  reentrance_detection.py  remove_comments.py  timestamp_dependence.py
dl/: data_loader.py  data_preprocessing.py  directory_setup.py  evaluation.py  inference.py  main.py  metrics.py  model.py  model_saving.py  tokenizer.py  train.py
