[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
rich = "^13.9.2"
thefuck = "^3.32"
transformers = "^4.45.2"
scikit-learn = "^1.5.2"
scrapy = "^2.11.2"
spacy = "^3.8.2"
regex = "^2024.9.11"
pdfplumber = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
